# chess2

./: .gitignore  CMakeLists.txt  README.md  ai.cpp  ai.h  board.cpp  board.h  boardview.cpp  boardview.h  gamemodedialog.cpp  gamemodedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmanager.cpp  networkmanager.h
